--- a/project-WeatherApp/style.css
+++ b/project-WeatherApp/style.css
@@ -30,6 +30,10 @@ input:focus {
     background-color: rgba(255, 255, 255, 0.4);
 }
 
+::placeholder {
+  color: #333;
+}
+
 /* Utiity Classes */
 .container {
     display: flex;
