--- a/project-WeatherApp/style.css
+++ b/project-WeatherApp/style.css
@@ -21,7 +21,7 @@ input {
     border-radius: 20px 2px 20px 2px;
     font-size: 1.2rem;
     background-color: rgba(255, 255, 255, 0.2);
-    color: #333;
+    color: #eee;
     transition: 0.3s ease-out;
     width: 100%;
 }
