--- a/project-WeatherApp/style.css
+++ b/project-WeatherApp/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap');
+
 /* CSS Reset */
 * {
     box-sizing: border-box;
@@ -6,7 +8,7 @@
 }
 
 body {
-    font-family: Helvetica, sans-serif;
+    font-family: 'Montserrat', Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
