--- a/project-WeatherApp/style.css
+++ b/project-WeatherApp/style.css
@@ -10,6 +10,7 @@
 body {
     font-family: 'Montserrat', Helvetica, sans-serif;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -71,6 +72,16 @@ input:focus {
     height: 100%;
     content: '';
     border-radius: 15px;
+}
+
+.alert {
+  width: 70vw;
+  color: #333;
+  padding: 0.5rem 2rem;
+  background: #eee;
+  margin-bottom: 1.2rem;
+  border-left: 5px solid red;
+  border-top-right-radius: 20px;
 }
 
 /* ID */
