--- a/project-WeatherApp/style.css
+++ b/project-WeatherApp/style.css
@@ -82,6 +82,7 @@ input:focus {
   margin-bottom: 1.2rem;
   border-left: 5px solid red;
   border-top-right-radius: 20px;
+  transition: 0.5s ease-in;
 }
 
 /* ID */
